hphp/test/slow/object/const/not_on_interface.hhas.expectf
Fatal error: Assembler Error: line 15: interfaces, traits and enums may not be const in %s/not_on_interface.hhas on line -1
